force-app/main/default/objects/Project_sync_API_Parameters__mdt/Project_sync_API_Parameters__mdt.object-meta.xml
<CustomObject>
    <label>Project sync API Parameters</label>
    <pluralLabel>Project sync API Parameters</pluralLabel>
</CustomObject>