force-app/main/default/objects/Project_sync_API_Parameters__mdt/fields/API_end_point__c.field-meta.xml
<CustomField>
    <fullName>API_end_point__c</fullName>
    <label>API end point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>