force-app/main/default/objects/Project_sync_API_Parameters__mdt/fields/Auth_API_endpoint__c.field-meta.xml
<CustomField>
    <fullName>Auth_API_endpoint__c</fullName>
    <label>Auth API endpoint</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>