force-app/main/default/objects/Project_sync_API_Parameters__mdt/fields/Client_secret__c.field-meta.xml
<CustomField>
    <fullName>Client_secret__c</fullName>
    <label>Client secret</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>