force-app/main/default/objects/Project_sync_API_Parameters__mdt/fields/Grant_type__c.field-meta.xml
<CustomField>
    <fullName>Grant_type__c</fullName>
    <label>Grant type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>